[FIX] unreadable context menu Darkred gtk3.css
This change only fixes unreadable context menu issues.
but only for the dark red simply circles theme
and only the gtk.css of the gtk3 version.
Firefox related context menu issues remained.

Original Problem: the Font color matched the highlighting background color => insivible.
Also on silverish normal context menu background the font  did not have enough contrast.
Solution: Set font color to white when background is in redish highlight mode and set nroaml color there to be slightly darker and reddish.

--- a/GTK_Gnome/Red/Simply_Circles_Red_Dark/gtk-3.0/gtk.css
+++ b/GTK_Gnome/Red/Simply_Circles_Red_Dark/gtk-3.0/gtk.css
@@ -1750,6 +1750,7 @@ menu menuitem,
   padding: 4px 8px;
   font: initial;
   text-shadow: none;
+  color: #521;
 }
 
 menu menuitem:hover,
@@ -1757,7 +1758,7 @@ menu menuitem:hover,
 .context-menu menuitem:hover {
   transition: none;
   background-color: rgba(160, 44, 44, 0.1);
-  color: #A02C2C;
+  color:white;
 }
 
 menu menuitem:hover accelerator,
